# Rubiks-cube

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitBoard.cpp
Model/PatternDatabase/: PatternDatabase.h
Pattern_Database/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BfsSolver.h  DfsSolver.h  IdaStarSolver.h  IddfsSolver.h
